...
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
    <string name="empty_list_message_favorites">No favorite configurations added</string>

    <!--Build elements-->
    <string name="unknown_trigger_type_text">Unknown trigger type!</string>
    <string name="triggered_deleted_user_text">Deleted user</string>
    <string name="triggered_deleted_configuration_text">Deleted configuration</string>
    <string name="build_result_section_text">Result</string>
    <string name="build_wait_reason_section_text">Wait reason</string>
    <string name="build_time_section_text">Time</string>
    <string name="build_queued_time_section_text">Queued time</string>
    <string name="build_time_to_start_section_text">Time to start</string>
    <string name="build_branch_section_text">Branch</string>
    <string name="build_agent_section_text">Agent</string>
    <string name="build_triggered_by_section_text">Triggered by</string>
    <string name="build_restarted_by_section_text">Restarted by</string>
    <string name="build_canceled_by_text">Canceled by</string>
    <string name="build_cancellation_time_text">Cancellation time</string>
    <string name="build_personal_text">Personal of</string>
    <string name="build_type_by_section_text">Configuration</string>
    <string name="build_project_by_section_text">Project</string>

    <!--Artifact-->
    <!--bottom sheet menu-->
...
    <string name="permissions_dialog_title">Permissions warning</string>
    <string name="permissions_dialog_content">In order to download artifact the app requires to have WRITE_EXTERNAL_STORAGE permissions granted.</string>
    <string name="permissions_install_packages_dialog_content">In order to install apk files the app requires to have install unknown apps permissions enabled.</string>
    <string name="permissions_dialog_text_no_permissions">The download artifacts functionality is disabled. Please enable required permissions.</string>

    <!--Build element-->
    <string name="build_element_copy_text">Text copied!</string>

    <!--Create account values-->
    <string name="server_no_such_server">No TeamCity server associated with hostname</string>
    <string name="server_correct_url">Please provide correct server url</string>
    <string name="server_not_secure_http">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>

...
